--- a/index.html
+++ b/index.html
@@ -61,12 +61,15 @@
             <h1 class="ramah">SRINIVASA RAMANUJAN </h1>
             <img class="ramaimg" src="ramanujan.png" alt="">
             <p class="ramap">
-                Date Of Birth : 4 November 1929 <br>
-                Place Of BIrth : Bengaluru <br>
-                Year Of Death : 21 April 2013 <br>
-                Childhood or important incidents of life : She did this without any formal education. At the <br> age of
-                six
-                she demonstrated her arithmetic abilities at the University of Mysore <br>
+                Date Of Birth: December 22, 1887 <br>
+                Place Of Birth: Erode <br>
+                Year of Death: April 26, 1920 <br>
+
+                Childhood or important incidents of life: A self-taught genius Indian mathematician, Srinivasa Ramanujan is known for his contributions to <br>
+                mathematical analysis, number theory and continued fractions. Born into a humble family, the celebrated <br>
+                mathematician struggled with poverty but still managed to publish first of his papers in the Journal of <br>
+                the Indian Mathematical Society. Later, his collaboration with English mathematician G. H. Hardy proved <br>
+                very productive. <br>
 
 
             </p>
@@ -129,10 +132,12 @@
                 Date Of Birth: 0287 BC <br>
                 Place Of Birth: Syracuse, Italy <br>
                 Year Of Died: 0212 BC <br>
-        
-                Greek mathematician, physicist, and astronomer Archimedes is remembered for his contribution to  <br>
-                mathematics, especially geometry. He laid down theorems related to the area of a circle, and the area  <br>
-                and volume of a sphere, and reached an accurate value of pi. He also invented machines such as the screw <br>
+
+                Greek mathematician, physicist, and astronomer Archimedes is remembered for his contribution to <br>
+                mathematics, especially geometry. He laid down theorems related to the area of a circle, and the area
+                <br>
+                and volume of a sphere, and reached an accurate value of pi. He also invented machines such as the screw
+                <br>
                 pump. <br>
 
             </p>
